prevent scrollbar

--- a/jumppos-client/src/styles.scss
+++ b/jumppos-client/src/styles.scss
@@ -25,9 +25,12 @@ $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 
 $md-card-default-margin: 24px !default;
 
-body {
+html, body {
     font-family: Roboto,"Helvetica Neue",sans-serif;
-    margin: 0px;
+    height:100%;
+    min-height:100vh;
+    margin:0;
+    overflow: hidden;
 }
 
 md-card {
